--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -253,7 +253,8 @@
 	--chart-3: oklch(0.769 0.188 70.08);
 	--chart-4: oklch(0.627 0.265 303.9);
 	--chart-5: oklch(0.645 0.246 16.439);
-	--sidebar: var(--color-neutral-90);
+	--app-page: oklch(0% 0 0);
+	--sidebar: oklch(0% 0 0);
 	--sidebar-foreground: var(--color-neutral-20);
 	--sidebar-primary: var(--color-primary);
 	--sidebar-primary-foreground: var(--color-neutral-90);
